# High-Frequency-Trading-System

./: CMakeLists.txt  README.md  strategy.md  trading_system
includes/: feed_parser.h  hft_client.h  htf_server.h  market_snapshot.h  order_manager.h
src/: hft_client.cpp  hft_server.cpp  main.cpp  market_snapshot.cpp  order_manager.cpp
trading_system.dSYM/Contents/Resources/DWARF/: trading_system
trading_system.dSYM/Contents/Resources/Relocations/aarch64/: trading_system.yml
